--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
     "postcss": "^8.2.10",
     "tailwindcss": "^2.1.1"
   }
