--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "firebase": "^8.4.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
