--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
-    "next": "10.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^10.0.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
