--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
-    "firebase": "^8.4.1",
+    "firebase": "^8.4.2",
+    "js-cookie": "^2.2.1",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
