product search implemented

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
     "plugins": [
         "react"
     ],
-    "rules": {
-    }
+    "rules": {       
+        "react/jsx-uses-react": "off",
+        "react/react-in-jsx-scope": "off"
+      }
 }
