--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
   },
   "dependencies": {
     "firebase": "^8.4.2",
+    "fuse.js": "^6.4.6",
     "js-cookie": "^2.2.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.3.4",
-    "next": "^10.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "firebase": "^8.4.1",
-    "next": "10.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-hook-form": "^7.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
