--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "firebase": "^8.4.2",
     "fuse.js": "^6.4.6",
     "js-cookie": "^2.2.1",
